[package]
name = "polysqueeze"
version = "0.1.3"
edition = "2024"
description = "Rust SDK for authenticated access to Polymarket's CLOB, Gamma, and WebSocket APIs."
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/augustin-v/polysqueeze"
repository = "https://github.com/augustin-v/polysqueeze"
keywords = ["polymarket", "prediction-markets", "websocket", "rust", "clob"]
categories = ["network-programming", "finance", "data-structures"]
documentation = "https://docs.rs/polysqueeze"

[dependencies]
async-trait = "0.1.71"
alloy-primitives = "1.4.1"
alloy-signer = { version = "1.0.42", features = ["eip712"] }
alloy-signer-local = { version = "1.0.42", features = ["eip712"] }
alloy-sol-types = { version = "1.4.1", features = ["eip712-serde", "json"] }
anyhow = "1.0.100"
base64 = "0.22.1"
bytes = "1.11.0"
chrono = { version = "0.4.42", features = ["serde"] }
futures = "0.3.31"
futures-util = "0.3.31"
hmac = "0.12.1"
mockito = "1.7.0"
rand = "0.9.2"
reqwest = { version = "0.12.20", features = ["gzip", "json", "stream"] }
rust_decimal = { version = "1.39.0", features = ["serde-with-str"] }
rust_decimal_macros = "1.39.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
url = "2.5.7"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
